--- a/MevetProject/rental_ads/templates/favorite_rentals.html
+++ b/MevetProject/rental_ads/templates/favorite_rentals.html
@@ -4,7 +4,7 @@
 
 
 <br>
-<h1 class="centered-h11">Избранные объявления</h1>
+<h1 class="centered-h11 otss">Избранные объявления</h1>
 
 <br>
 {% if favorites %}
@@ -25,7 +25,7 @@
 {% else %}
 <center>
 
-    <p style="margin-top: 8%; margin-bottom: 13%;">У вас пока нет избранных объявлений! <br> Вы можете найти интересующие вас объявления в категориях на платформе</p>
+    <p style="margin-top: 8%; margin-bottom: 90%;">У вас пока нет избранных объявлений! <br> Вы можете найти интересующие вас объявления в категориях на платформе</p>
     </center>
 {% endif %}
 
