--- a/MevetProject/rental_ads/templates/index.html
+++ b/MevetProject/rental_ads/templates/index.html
@@ -20,8 +20,8 @@
     <div class="index-osnov">
         <div class="index-left">
             <div class="index-cards-text" style="text-align:left;">
-                <h2 style="font-size: 35px;">Добро пожаловать на Mevet</h2>
-                <p style="font-size: 20px;">Маркетплейс мероприятий, где вы можете найти и создать самые захватывающие и интересные мероприятия.
+                <h2>Добро пожаловать на Mevet</h2>
+                <p>Маркетплейс мероприятий, где вы можете найти и создать самые захватывающие и интересные мероприятия.
         У нас вы найдете мероприятия различных категорий, включая концерты, фестивали, спортивные соревнования, выставки и многое другое.
             Присоединяйтесь к нашей платформе, чтобы быть в курсе последних событий и обнаруживать новые возможности для развлечений и общения.</p>
             </div>
@@ -40,8 +40,8 @@
             <br>
             <br>
             <div class="index-cards-text" style="text-align:left;">
-                <h2 style="font-size: 33px;">Общение с участниками</h2>
-                <p style="font-size: 17px;">На платформе Mevet, маркетплейсе мероприятий, доступен чат, который позволяет вам общаться с теми, кто разместил объявления о мероприятиях. Чат является удобным инструментом для взаимодействия с организаторами или другими участниками, которые заинтересовали вас и вызвали вопросы или потребность в дополнительной информации. Вы можете использовать чат для обсуждения деталей мероприятий, запроса дополнительных билетов, получения информации о расписании или любых других вопросов, связанных с мероприятием.</p>
+                <h2>Общение с участниками</h2>
+                <p>На платформе Mevet, маркетплейсе мероприятий, доступен чат, который позволяет вам общаться с теми, кто разместил объявления о мероприятиях. Чат является удобным инструментом для взаимодействия с организаторами или другими участниками, которые заинтересовали вас и вызвали вопросы или потребность в дополнительной информации. Вы можете использовать чат для обсуждения деталей мероприятий, запроса дополнительных билетов, получения информации о расписании или любых других вопросов, связанных с мероприятием.</p>
             </div>
         </div>
         <div class="index-right">
@@ -58,8 +58,8 @@
             <br>
             <br>
             <div class="index-cards-text" style="text-align:left;">
-                <h2 style="font-size: 33px;">Помощь в организации мероприятий</h2>
-                <p style="font-size: 17px;">Mevet предоставляет инструменты для организации и продвижения мероприятий.
+                <h2>Помощь в организации мероприятий</h2>
+                <p>Mevet предоставляет инструменты для организации и продвижения мероприятий.
                 Вы можете создавать свои собственные события, определять даты, места, продавать билеты и взаимодействовать с участниками.
                 Наша платформа обеспечивает простоту использования и позволяет вам эффективно управлять всеми аспектами вашего мероприятия.
                 Независимо от того, организуете вы большой концерт или небольшую встречу, Mevet поможет вам сделать ваше мероприятие запоминающимся.</p>
