--- a/MevetProject/rental_ads/templates/messages_detail.html
+++ b/MevetProject/rental_ads/templates/messages_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<h1 class="centered-h11">Переписка на объявлении "{{ rental.title }}"</h1>
+<h1 class="centered-h11 otss">Переписка на объявлении "{{ rental.title }}"</h1>
 <br>
   <div class="message-container">
 
