--- a/MevetProject/rental_ads/templates/rental_manage.html
+++ b/MevetProject/rental_ads/templates/rental_manage.html
@@ -3,7 +3,7 @@
 {% block title %}Ваши объявления{% endblock %}
 {% block content %}
 <br>
-<h1 align="left" style="margin-left: 3%; font-size: 23px;">Личный кабинет</h1>
+<h1 align="left" style="margin-left: 3%; font-size: 23px;" class="otss">Личный кабинет</h1>
 
 <br>
 {% if rental_list %}
