--- a/MevetProject/rental_ads/static/rental_ads/css/index_rental.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/index_rental.css
@@ -1,5 +1,4 @@
 .video-bg {
-    margin-top: -8.35%;
     height: 100vh;
     width: 100%;
     overflow: hidden;
@@ -7,6 +6,8 @@
     justify-content: center;
     align-items: center;
     position: fixed;
+    top: 0;
+    left: 0;
     z-index: -2;
 }
 
@@ -45,7 +46,7 @@
 
 
 .index-body{
-margin-top: 50%;
+margin-top: 60%;
 width: 100%;
 background: black;
 }
@@ -76,6 +77,17 @@ margin: 0 auto;
     color: white;
     line-height: 1.7;
     width: 85%;
+}
+
+.index-cards-text h2{
+    font-size: 35px;
+
+}
+
+.index-cards-text p{
+font-size: 20px;
+
+
 }
 
 .index-cards-photo {
@@ -113,6 +125,133 @@ margin: 0 auto;
         font-size: 20px;
     }
 
+/* Медиа-запрос для смартфонов */
+@media only screen and (max-width: 767px) {
+    .video-bg {
+    height: 100vh;
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -2;
+}
 
+.video-bg video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -2;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
+
+.effects {
+    position: absolute;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.video-bg__content {
+    z-index: -1;
+    color: #ffffff;
+    font-size: 45px;
+    position: absolute;
+    left: 6%;
+    bottom: 40%;
+
+}
+
+.index-body{
+margin-top: 230%;
+width: 100%;
+background: black;
+}
+
+.index-white-color{
+    color: white;
+}
+
+.index-osnov {
+    display: flex;
+    width: 100%;
+    margin: 0 auto;
+    justify-content: center; /* Добавлено для горизонтального центрирования */
+
+}
+
+.index-left {
+    width: 50%;
+}
+
+.index-right {
+    width: 50%;
+}
+
+.index-cards-text {
+margin: 0 auto;
+    border-radius: 20px;
+    padding: 8px;
+    color: white;
+    line-height: 1.7;
+    width: 100%;
+
+}
+
+.index-cards-text h2{
+    font-size: 20px;
+
+}
+
+.index-cards-text p{
+font-size: 12px;
+
+
+}
+
+.index-cards-photo {
+margin: 0 auto;
+        position: relative;
+        width: 160px; /* Размеры фотографии можно настроить по вашему усмотрению */
+        height: 250px;
+        overflow: hidden;
+        border-radius: 18px;
+    }
+
+    .index-cards-photo img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: all 0.3s;
+        border-radius:18px;
+    }
+
+    .index-cards-photo:hover img {
+        border-radius: 18px;
+
+        transform: scale(1.5);
+    }
+
+    .index-cards-photo .photo-text {
+        position: absolute;
+        bottom: 5%;
+        border-radius: 13px;
+        left: 5%;
+
+        background-color: rgba(0, 0, 0, 0.7);
+        color: white;
+        padding: 10px;
+        font-size: 15px;
+    }
+}
 
 
