--- a/MevetProject/rental_ads/static/rental_ads/css/message_rental.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/message_rental.css
@@ -61,3 +61,71 @@
 .message-form .fa {
   margin-left: 0;
 }
+
+
+
+
+@media only screen and (max-width: 767px) {
+    .message-container {
+  border-radius: 10px;
+  background-color: #F0F2F5;
+  padding: 10px;
+  height: 500px;
+  overflow-y: auto;
+  width: 100%;
+  margin: 0 auto; /* Выравнивание по центру */
+}
+/* CSS для каждого сообщения */
+.message {
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+
+/* CSS для формы */
+.message-form {
+  border-top: 1px solid #E4E6EB;
+  padding: 10px;
+  width: 95%;
+  margin: 20px auto 0;
+}
+
+.form-content {
+  display: flex;
+  align-items: center;
+}
+
+.message-form textarea {
+  flex: 1;
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #E4E6EB;
+  border-radius: 5px;
+  resize: none;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  height: 40px;
+}
+
+.message-form .submit-button {
+  padding: 6px;
+  border: none;
+  border-radius: 50%;
+  background-color: #5181B8;
+  color: #FFFFFF;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  cursor: pointer;
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+}
+
+.message-form .fa {
+  margin-left: 0;
+}
+}
