--- a/MevetProject/rental_ads/static/rental_ads/css/rentals_categories.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/rentals_categories.css
@@ -1,6 +1,7 @@
 
 /* Вывод карточек с объявленями*/
 .title-filter-top {
+    margin-top:120px;
     margin-left: 3%;
     margin-right: 3%;
     display: flex;
@@ -164,39 +165,159 @@
 
 
 
-.centered-h11 {
-    flex-grow: 1;
-    text-align: center;
 
+
+
+/* Медиа-запрос для смартфонов */
+@media only screen and (max-width: 767px) {
+
+.title-filter-top {
+    margin-top:50px;
+    margin-left: 1%;
+    margin-right: 2%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+.ride {
+    display: none;
+    align-items: flex-start;
+}
+
+
+
+.title-filter-top h1 {
     font-size: 22px;
     text-align: center;
 }
 
-.title-filter-top-favorites {
-    margin-left: 3%;
-    margin-right: 3%;
-    display: flex;
+.centered-h1 {
     flex-grow: 1;
-
+    text-align: center;
+    margin-left:2%;
 }
 
-.ride11 {
-    display: flex;
-    text-align: left;
+
+.form-wrapper {
+    text-align: right;
+    margin-left: auto;
+    margin-right: 10%;
 }
 
-.ride11 p {
-    padding: 10px;
-    color: gray;
-    font-size: 20px;
+.filter {
+    width: 100%;
+    padding: 5px;
+    border: none;
+    border-radius: 10px;
+    box-shadow:4px 4px 10px rgba(0,0,0,0.3);
+    color: black;
+    font-weight: bold;
+    background-color: white;
     cursor: pointer;
-    margin-left: 3%;
+    outline: none;
+    transition: all 0.2s ease-in-out;
+    font-family: 'Century Gothic', sans-serif;
+
 }
 
-.ride11 p:hover {
-    color: black;
+
+
+
+.rentals-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
 }
 
-.ride11 p.active {
+.rental-item {
+    width: 100%;
+    height: 450px;
+    margin: 3%;
+    border-radius: 15px;
+    margin-bottom: 6px;
+    transition: 0.3s;
+}
+
+.rental-item:hover {
+    box-shadow: 0px 40px 40px 0px rgba(0,0,0,0.2);
+    /*border-radius: 0px 0px 15px 15px;*/
+    opacity: 95%;
+    transform: translateY(-10px);
+    border-radius: 15px;
+}
+
+.rental-item img {
+    width: 100%;
+    height: 70%;
+    border-radius: 15px;
+    object-fit: cover;
+    margin-bottom: 3px;
+    transition: all 0.3s;
+}
+
+.rental-item h3 {
+    padding-left: 1%;
+    padding-right: 1%;
     color: black;
+    font-size: 17px;
+    margin-bottom: 5px;
+}
+
+.rental-item p {
+    padding-left: 1%;
+    padding-right: 1%;
+    color: gray;
+    font-size: 15px;
+    margin-bottom: 5px;
+}
+
+.rental-item h4 {
+    padding-left: 1%;
+    padding-right: 1%;
+    align: bottom;
+    color: black;
+    font-size: 17px;
+    margin-bottom: 4px;
+}
+
+.add-to-favorites {
+    background-color: white;
+    color: black; /* Изменяем цвет текста на белый */
+    border-radius: 0.7em;
+    padding: 3px;
+    margin-left:1%;
+    border: 1px solid white;
+    cursor: pointer;
+    font-family: 'Century Gothic', sans-serif;
+    transition: background-color 0.3s ease, transform 0.3s ease, color 0.3s ease, border 0.3s ease; /* Добавляем transition для цвета */
+    transform: translateY(30%);
+}
+
+.add-to-favorites:hover {
+    background-color: white;
+    color: black; /* Изменяем цвет текста на белый */
+    border: 1px solid black;
+}
+
+.delete-from-favorites {
+    background-color: white;
+    color: red; /* Изменяем цвет текста на белый */
+    border-radius: 0.7em;
+    padding: 3px;
+    margin-left:1%;
+    border: 1px solid white;
+    cursor: pointer;
+    font-family: 'Century Gothic', sans-serif;
+    transition: background-color 0.3s ease, transform 0.3s ease, color 0.3s ease, border 0.3s ease; /* Добавляем transition для цвета */
+    transform: translateY(30%);
+}
+
+.delete-from-favorites:hover {
+    background-color: white;
+    color: red; /* Изменяем цвет текста на белый */
+    border: 1px solid red;
+}
+
 }
