--- a/MevetProject/rental_ads/static/rental_ads/css/style_footer.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/style_footer.css
@@ -1,76 +1,94 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-body{
+body {
     line-height: 1.5;
     font-family: 'Century Gothic', sans-serif;
 }
-*{
-    margin:0;
-    padding:0;
+
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-footer{
+footer {
     width: 100%;
-
     background-color: rgba(0, 0, 0, 0.9);
     backdrop-filter: blur(13px);
     background-size: cover;
     background-position: center;
 }
-.container{
+
+.container {
     max-width: 100%;
-    margin:auto;
+    margin: auto;
 }
 
-.container p{
+.container p {
     margin-top: 2%;
-
 }
 
-ul{
+ul {
     list-style: none;
 }
 
-.footer{
+.footer {
     padding: 70px 0;
 }
 
-.footer-col{
-    width: 25%;
-    padding: 0 13px;
-
+.footer-col {
+    width: 100%;
+        padding: 0;
 }
 
-.footer-col h4{
+.footer-col h4 {
     font-size: 18px;
     color: #ffffff;
     text-transform: capitalize;
     margin-bottom: 35px;
     font-weight: 500;
     position: relative;
+    text-align: center;
 }
 
+.footer-col .social-links {
+    display: flex;
+    justify-content: center;
+}
 
-
-.footer-col .social-links a{
+.footer-col .social-links a {
     display: inline-block;
     height: 40px;
     width: 40px;
-    background-color: rgba(255,255,255,0.2);
-    margin:0 10px 10px 0;
+    background-color: rgba(255, 255, 255, 0.2);
+    margin: 0 10px 10px 0;
     text-align: center;
     line-height: 40px;
     border-radius: 50%;
     color: #ffffff;
     transition: all 0.5s ease;
 }
-.footer-col .social-links a:hover{
+
+.footer-col .social-links a:hover {
     color: #24262b;
     background-color: #ffffff;
 }
 
+/* Медиа-запрос для смартфонов */
+@media only screen and (max-width: 767px) {
+    .footer-col {
+        width: 100%;
+        padding: 0;
+    }
 
+    .footer-col h4 {
+        font-size: 16px;
+        margin-bottom: 15px;
+    }
 
+    .container p {
+        margin-top: 15px;
+    }
+}
 
 
 
