--- a/MevetProject/rental_ads/static/rental_ads/css/style_menu.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/style_menu.css
@@ -15,6 +15,7 @@ header {
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.8);
     backdrop-filter: blur(13px);
+    -webkit-backdrop-filter: blur(10px);
     /*border-radius: 0px 0px 8px 8px;*/
     transition: transform 0.3s ease-in-out;
     z-index: 999;
@@ -190,6 +191,7 @@ display: none; /* Скрыть кнопку на десктопных устро
     left: 0;
     width: 100%;
 
+
     display: flex;
     flex-direction: column; /* Добавляем свойство, чтобы меню располагались один под другим */
     align-items: center;
@@ -245,12 +247,13 @@ display: none; /* Скрыть кнопку на десктопных устро
 
     .bottom {
         position: fixed;
-        top: -24%;
+        top: -3%;
         left: 0;
         width: 100%;
-        height: 100vh;
+        height: 110vh;
         background-color: rgba(0, 0, 0, 0.8);
-        backdrop-filter: blur(13px);
+        backdrop-filter: blur(4px);
+        -webkit-backdrop-filter: blur(4px);
         transform: translateX(-100%);
         animation: slideOut 0.3s ease-in-out forwards;
         flex-direction: column;
